--- a/src/App.scss
+++ b/src/App.scss
@@ -22,12 +22,19 @@
     padding: 2vh 1vw;
   }
   #displayer {
+    svg {overflow: visible;}
     grid-area: displayer;
     display: grid;
     place-items: center;
     .bubble-tea {
       max-width: fit-content;
       max-height: 70%;
+    }
+    .name{
+      font-size: 4rem;
+    }
+    #tube{
+      transform: scale(.4) translate(-62%, -57%);
     }
   }
 
@@ -77,3 +84,43 @@
   #{$property}: superMinMax($max, $vw);
   #{$property}: superClamp($max, $vw);
 }
+
+
+
+
+.st0{fill:hsl(13,100%,95%);} //jus clair hsl(13,100%,95%)
+	.st1{opacity:0.52;fill:#FFB29E;} //hsl(12,100%,81%)
+	.st2{fill:#F99C7B;} //hsl(16,91%,73%)
+	.st3{fill:#FD9B81;} //hsl(13,97%,75%)
+	.st4{fill:none;stroke:#FE8261;stroke-width:2.1561;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+	.st5{opacity:0.24;fill:#FFFFFF;}
+	.st6{opacity:0.62;fill:#F99C7B;}
+	.st7{fill:#FEF0EB;}
+	.st8{opacity:0.52;fill:#AC6046;}
+	.st9{fill:#603729;}
+	.st10{fill:#9A5B46;}
+	.st11{fill:none;stroke:#9A5B46;stroke-width:2.1561;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+	.st12{opacity:0.62;fill:#603729;}
+	.st13{fill:#EAF8EF;}
+	.st14{opacity:0.52;fill:#439363;}
+	.st15{fill:#087132;}
+	.st16{fill:#439363;}
+	.st17{fill:none;stroke:#9DBEA2;stroke-width:2.1561;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+	.st18{opacity:0.62;fill:#439363;}
+	.st19{fill:#D97777;}
+	.st20{fill:#8F3939;}
+	.st21{fill:#680303;}
+	.st22{fill:#FFC5C5;}
+	.st23{fill:#FFE4CA;}
+	.st24{fill:#FFCE9F;}
+	.st25{fill:#F6B87C;}
+	.st26{fill:#FFF9F3;}
+	.st27{fill:#F7B87C;}
+	.st28{fill:#404162;}
+	.st29{fill:#3A3B59;}
+	.st30{fill:#31324B;}
+	.st31{fill:#595A88;}
+	.st32{fill:none;stroke:#FE8261;stroke-width:5.907;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+	.st33{opacity:0.73;fill:#404162;}
+	.st34{fill:#55475E;}
+	.st35{fill:#252127;}
