--- a/src/App.scss
+++ b/src/App.scss
@@ -1,112 +1,16 @@
-//import
+//import fonts
 @import url("https://fonts.googleapis.com/css2?family=Beth+Ellen&family=Chango&family=Dancing+Script:wght@700&family=Pacifico&family=Rock+Salt&display=swap");
 
 //variables
 :root {
-  --color-bg: #ababba;
-  --color-txt: #ababba;
+  --color-bg: #f8faff;
+  --color-txt: #2d3958;
+  --color-border: #ababba;
   --font-family-0: "Rock Salt", cursive;
   --font-family-1: "Beth Ellen", cursive;
   --font-family-2: "Chango", cursive;
   --font-family-3: "Dancing Script", cursive;
   --font-family-4: "Pacifico", cursive;
-}
-
-#root {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-#App {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: minmax(300px, 1fr) minmax(200px, 300px);
-  grid-template-rows: 75vh 25vh;
-  gap: 0px 0px;
-  grid-template-areas:
-    "displayer sidebar"
-    "bottombar sidebar";
-  .box {
-    border: 5px solid var(--color-bg);
-  }
-
-  #displayer {
-    svg {
-      overflow: visible;
-    }
-    grid-area: displayer;
-    display: grid;
-    place-items: center;
-
-    .name {
-      font-size: 4rem;
-      // font-family: var(--font-family-2);
-      text-transform: uppercase;
-    }
-    .beth {
-      font-family: var(--font-family-1);
-    }
-    .bubble-tea {
-      max-width: fit-content;
-      max-height: 70%;
-      .tube {
-        transform: scale(0.4) translate(-62%, -57%);
-
-        .st33 {
-          opacity: 0.73;
-          fill: #404162;
-        }
-        .st34 {
-          fill: #55475e;
-        }
-        .st35 {
-          fill: #252127;
-        }
-      }
-    }
-  }
-
-  #sidebar {
-    grid-area: sidebar;
-    color: var(--color-txt);
-    text-transform: uppercase;
-    .sidebar__title {
-      text-align: center;
-    }
-    .sidebar_inputs-container {
-      min-height: 50%;
-      padding: 5vw 2vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      flex: 1;
-      .sidebar__input-wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-      }
-    }
-  }
-
-  #bottombar {
-    grid-area: bottombar;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    .bottombar__Box {
-      &:nth-child(2) {
-        border-left: 5px solid var(--color-bg);
-        border-right: 5px solid var(--color-bg);
-      }
-      display: grid;
-      place-items: center;
-      height: 100%;
-      // padding: 5%;
-      svg {
-        height: max-content;
-      }
-    }
-  }
 }
 
 //functions
@@ -126,4 +30,103 @@
   #{$property}: $max * 1px;
   #{$property}: superMinMax($max, $vw);
   #{$property}: superClamp($max, $vw);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#App {
+  display: grid;
+  grid-template-columns: minmax(300px, 1fr) minmax(200px, 300px);
+  grid-template-rows: 75vh minmax(25vh, auto);
+  background-color: var(--color-bg);
+  grid-template-areas:
+    "displayer sidebar"
+    "bottombar sidebar";
+
+  #displayer {
+    border: 5px solid var(--color-border);
+    grid-area: displayer;
+    display: grid;
+    place-items: center;
+    .name {
+      @include clamp(font-size, 50);
+      text-transform: uppercase;
+    }
+  }
+
+  #sidebar {
+    grid-area: sidebar;
+    border: 5px solid var(--color-border);
+    color: var(--color-txt);
+    text-transform: uppercase;
+    .sidebar__title {
+      text-align: center;
+      @include clamp(font-size, 30);
+    }
+    .label {
+      font-weight: 500;
+    }
+    .sidebar_inputs-container {
+      min-height: 50%;
+      padding: 5vw 2vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      flex: 1;
+      .sidebar__input-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+    }
+  }
+
+  #bottombar {
+    grid-area: bottombar;
+    display: flex;
+    flex-wrap: wrap;
+    .bottombar__Box {
+      display: grid;
+      place-items: center;
+      flex: 1;
+      border: 5px solid var(--color-border);
+      svg {
+        margin: 10%;
+        height: max-content;
+      }
+    }
+  }
+
+  .bubble-tea {
+    overflow: visible;
+    max-width: fit-content;
+    g {
+      transition: all 0.5s;
+    }
+    .tube {
+      transform: scale(0.4) translate(-62%, -57%);
+
+      .st33 {
+        opacity: 0.73;
+        fill: #404162;
+      }
+      .st34 {
+        fill: #55475e;
+      }
+      .st35 {
+        fill: #252127;
+      }
+    }
+  }
+}
+//loop
+@for $index from 0 through 4 {
+  .font-family-#{$index} {
+    font-family: var(--font-family-#{$index});
+  }
 }
